fixed issue where carriers table wasnt being updated. fixed vendiro logo not showing

--- a/view/adminhtml/web/css/adminhtml_system_config_edit.css
+++ b/view/adminhtml/web/css/adminhtml_system_config_edit.css
@@ -175,12 +175,6 @@
     margin-left: 10px;
 }
 
-#supporttab .legend-version .panda-george {
-    float:right;
-    max-width: 300px;
-    width: 100%;
-}
-
 #supporttab .legend-version .compatible-image {
     vertical-align: text-bottom;
 }
